MyFirstProject/src/objects/BankDetails__c.object
<CustomObject>
    <description>Customer Bank Details</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>BanksDetails</relationshipLabel>
        <relationshipName>BanksDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BankDetails</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BankDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BanksDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>